fix breadcrumb in 2.5 & add button with new template features
git-svn-id: http://piwigo.org/svn/extensions/skeleton/trunk@21307 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/language/en_UK/intro.html
+++ b/language/en_UK/intro.html
@@ -15,6 +15,7 @@
     <li>Add filters and actions to the Batch Manager</li>
     <li>Simple template prefilter (on picture.php page)</li>
     <li>Add new method to the API</li>
+    <li>Add a toolbar button</li>
   </ul>
 </p>
 
