--- a/language/fr_FR/intro.html
+++ b/language/fr_FR/intro.html
@@ -15,6 +15,7 @@
     <li>Ajout des filtres et actions au gestionnaire de lots</li>
     <li>Préfiltre de template simple (sur page picture.php)</li>
     <li>Ajout d'une méthode à l'API</li>
+    <li>Ajout d'un bouton dans la barre d'outils</li>
   </ul>
 </p>
 
